--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <header id="top" class="main-header">
-      <h1>Victoria Henderson</h1>
+      <h1 class="title">Victoria Henderson</h1>
       <ul class="main-nav">
-        <li><a href="#">HOME</li>
+        <li><a href="#">HOME</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -20,7 +20,7 @@
       <img src="images/responsive-layout-profile.png">
       <p>Hi I'm a front-end web developer who loves responsive design and css. I recently finished learning web development at treehouse and am excited to put all my stills to use!</p>
     </div>
-    <div>
+    <div class="col">
       <h2 id="portfolio">PORTFOLIO</h2>
       <img src="images/portfolio-1.png">
       <h3>marketing page</h3>
@@ -35,7 +35,7 @@
       <h3>map of favorite spots</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-5.png">
-      <h23>photo gallery</h23>
+      <h3>photo gallery</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-6.png">
       <h3>calculator</h3>
@@ -44,10 +44,10 @@
     <div id="contact" class="contact">
       <h2>CONTACT</h2>
       <p>if you're interested in chatting or want more information about what ive been working on, I'd love to hear from you!</p>
-      <p>Phone<a href="tel:555-555-5555">555-555-5555</a></p>
-      <p>Email <a href="mailto:filleremail@gmail.com">filleremail@gmail.com</a></p>
+      <p>Phone: <a href="tel:555-555-5555">555-555-5555</a></p>
+      <p>Email: <a href="mailto:filleremail@gmail.com">filleremail@gmail.com</a></p>
     </div>
-    <footer>
+    <footer class="main-footer">
       <p>Victoria Henderson</p>
 			<a href="#top">Back to top &raquo;</a>
     </footer>
