basic mobile layout
basic mobile layout CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	  <link rel="stylesheet" href="css/normalize.css">
 	  <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width">
   </head>
 
   <body>
@@ -47,9 +48,9 @@
       <p>Phone: <a href="tel:555-555-5555">555-555-5555</a></p>
       <p>Email: <a href="mailto:filleremail@gmail.com">filleremail@gmail.com</a></p>
     </div>
-    <footer class="main-footer">
-      <p>Victoria Henderson</p>
-			<a href="#top">Back to top &raquo;</a>
+    <footer class="main-footer clearfix">
+      <p class="footer-name">Victoria Henderson</p>
+			<p class="to-top"><a href="#top">Back to top</a></p>
     </footer>
   </body>
 </html>
