--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>portfolio site</title>
-    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
 	  <link rel="stylesheet" href="css/normalize.css">
 	  <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width">
@@ -18,35 +18,35 @@
       </ul>
     </header>
     <div class="banner">
-      <img src="images/responsive-layout-profile.png">
+      <img class="profile-photo"src="images/responsive-layout-profile.png" alt="photo of victoria">
       <p>Hi I'm a front-end web developer who loves responsive design and css. I recently finished learning web development at treehouse and am excited to put all my stills to use!</p>
     </div>
     <div class="col">
       <h2 id="portfolio">PORTFOLIO</h2>
       <img src="images/portfolio-1.png">
-      <h3>marketing page</h3>
+      <h3>Marketing page</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-2.png">
-      <h3>search page</h3>
+      <h3>Search page</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-3.png">
-      <h3>travel app</h3>
+      <h3>Travel app</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-4.png">
-      <h3>map of favorite spots</h3>
+      <h3>Map of favorite spots</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-5.png">
-      <h3>photo gallery</h3>
+      <h3>Photo gallery</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
       <img src="images/portfolio-6.png">
-      <h3>calculator</h3>
+      <h3>Calculator</h3>
       <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
     </div>
     <div id="contact" class="contact">
       <h2>CONTACT</h2>
       <p>if you're interested in chatting or want more information about what ive been working on, I'd love to hear from you!</p>
-      <p>Phone: <a href="tel:555-555-5555">555-555-5555</a></p>
-      <p>Email: <a href="mailto:filleremail@gmail.com">filleremail@gmail.com</a></p>
+      <p>Phone: <a class="contact-info"href="tel:555-555-5555">555-555-5555</a></p>
+      <p>Email: <a class="contact-info" href="mailto:filleremail@gmail.com">filleremail@gmail.com</a></p>
     </div>
     <footer class="main-footer clearfix">
       <p class="footer-name">Victoria Henderson</p>
