--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   <body>
     <header id="top" class="main-header">
       <h1 class="title">Victoria Henderson</h1>
-      <ul class="main-nav">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-      </ul>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </nav>
     </header>
-    <div class="banner">
+    <div class="banner clearfix">
       <img class="profile-photo"src="images/responsive-layout-profile.png" alt="photo of victoria">
-      <p>Hi I'm a front-end web developer who loves responsive design and css. I recently finished learning web development at treehouse and am excited to put all my stills to use!</p>
+      <p class="profile-text">Hi I'm a front-end web developer who loves responsive design and css. I recently finished learning web development at treehouse and am excited to put all my stills to use!</p>
     </div>
     <div class="col">
       <h2 id="portfolio">PORTFOLIO</h2>
@@ -51,6 +53,13 @@
     <footer class="main-footer clearfix">
       <p class="footer-name">Victoria Henderson</p>
 			<p class="to-top"><a href="#top">Back to top</a></p>
+      <div class="bottom-nav">
+				<ul id="bottom-ul">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
     </footer>
   </body>
 </html>
