Tablet & laptop screen CSS
CSS for the tablet size screens and full sized screens.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header id="top" class="main-header">
+    <header id="top" class="main-header clearfix">
       <h1 class="title">Victoria Henderson</h1>
       <nav class="main-nav">
         <ul>
@@ -25,24 +25,38 @@
     </div>
     <div class="col">
       <h2 id="portfolio">PORTFOLIO</h2>
-      <img src="images/portfolio-1.png">
-      <h3>Marketing page</h3>
-      <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
-      <img src="images/portfolio-2.png">
-      <h3>Search page</h3>
-      <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
-      <img src="images/portfolio-3.png">
-      <h3>Travel app</h3>
-      <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
-      <img src="images/portfolio-4.png">
-      <h3>Map of favorite spots</h3>
-      <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
-      <img src="images/portfolio-5.png">
-      <h3>Photo gallery</h3>
-      <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
-      <img src="images/portfolio-6.png">
-      <h3>Calculator</h3>
-      <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+      <div class="projects">
+        <div class="cell">
+          <img src="images/portfolio-1.png">
+          <h3>Marketing page</h3>
+          <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+        </div>
+        <div class="cell">
+          <img src="images/portfolio-2.png">
+          <h3>Search page</h3>
+          <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+        </div>
+        <div class="cell">
+          <img src="images/portfolio-3.png">
+          <h3>Travel app</h3>
+          <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+        </div>
+        <div class="cell">
+          <img src="images/portfolio-4.png">
+          <h3>Map of favorite spots</h3>
+          <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+        </div>
+        <div class="cell">
+          <img src="images/portfolio-5.png">
+          <h3>Photo gallery</h3>
+          <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+        </div>
+        <div class="cell">
+          <img src="images/portfolio-6.png">
+          <h3>Calculator</h3>
+          <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
+        </div>
+    </div>
     </div>
     <div id="contact" class="contact">
       <h2>CONTACT</h2>
