code validated for errors
CSS & HTML code validated

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
   <head>
@@ -20,39 +21,39 @@
       </nav>
     </header>
     <div class="banner clearfix">
-      <img class="profile-photo"src="images/responsive-layout-profile.png" alt="photo of victoria">
+      <img class="profile-photo" src="images/responsive-layout-profile.png" alt="photo of victoria">
       <p class="profile-text">Hi I'm a front-end web developer who loves responsive design and css. I recently finished learning web development at treehouse and am excited to put all my stills to use!</p>
     </div>
     <div class="col">
       <h2 id="portfolio">PORTFOLIO</h2>
       <div class="projects">
         <div class="cell">
-          <img src="images/portfolio-1.png">
+          <img src="images/portfolio-1.png" alt="image of marketing page project">
           <h3>Marketing page</h3>
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
         <div class="cell">
-          <img src="images/portfolio-2.png">
+          <img src="images/portfolio-2.png" alt="image of search page project">
           <h3>Search page</h3>
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
         <div class="cell">
-          <img src="images/portfolio-3.png">
+          <img src="images/portfolio-3.png" alt="image of travel app project">
           <h3>Travel app</h3>
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
         <div class="cell">
-          <img src="images/portfolio-4.png">
+          <img src="images/portfolio-4.png" alt="image of map project">
           <h3>Map of favorite spots</h3>
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
         <div class="cell">
-          <img src="images/portfolio-5.png">
+          <img src="images/portfolio-5.png" alt="image of photo gallery project">
           <h3>Photo gallery</h3>
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
         <div class="cell">
-          <img src="images/portfolio-6.png">
+          <img src="images/portfolio-6.png" alt="image of calculator project">
           <h3>Calculator</h3>
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
@@ -61,7 +62,7 @@
     <div id="contact" class="contact">
       <h2>CONTACT</h2>
       <p>if you're interested in chatting or want more information about what ive been working on, I'd love to hear from you!</p>
-      <p>Phone: <a class="contact-info"href="tel:555-555-5555">555-555-5555</a></p>
+      <p>Phone: <a class="contact-info" href="tel:555-555-5555">555-555-5555</a></p>
       <p>Email: <a class="contact-info" href="mailto:filleremail@gmail.com">filleremail@gmail.com</a></p>
     </div>
     <footer class="main-footer clearfix">
