--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
     </div>
+    <div class="skills">
+      <h2>Skills</h2>
+      <p>Below is a list of skills I have developed over the years as well as programs I am proficient in using</p>
+      <div class="skill-list">
+        <ul>
+          <li>HTML &amp; CSS</li>
+          <li>Typography</li>
+          <li>User Experience Design</li>
+          <li>Photography</li>
+          <li>Adobe Illustrator</li>
+          <li>Adobe Photoshop</li>
+          <li>Adobe Indesign</li>
+          <li>Adobe XD</li>
+        </ul>
+      </div>
+    </div>
     </div>
     <div id="contact" class="contact">
       <h2>CONTACT</h2>
