--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
           <li><a href="#">HOME</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </nav>
@@ -58,7 +59,7 @@
           <p>this project shows the front page of a marketing website meant for a specific business i'm interested in</p>
         </div>
     </div>
-    <div class="skills">
+    <div id="skills" class="skills">
       <h2>Skills</h2>
       <p>Below is a list of skills I have developed over the years as well as programs I am proficient in using</p>
       <div class="skill-list">
@@ -88,6 +89,7 @@
 				<ul id="bottom-ul">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#skills">Skills</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
