--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <div class="banner clearfix">
       <img class="profile-photo" src="images/responsive-layout-profile.png" alt="photo of victoria">
-      <p class="profile-text">Hi I'm a front-end web developer who loves responsive design and css. I recently finished learning web development at treehouse and am excited to put all my stills to use!</p>
+      <p class="profile-text">Hi I'm a front-end web developer, graphic designer & photographer. I recently finished learning web development at treehouse and am excited to put all my stills to use. Thanks for taking a look at my work!</p>
     </div>
     <div class="col">
       <h2 id="portfolio">PORTFOLIO</h2>
